examples/test/testpolicy19979.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19979
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key37: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value34
          key27: value27
      podSelector:
        matchLabels:
          key6: value39
          key22: value25
